fixed styling issues

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div id="content">
       <section id="work">
-        <h1>Hi, I'm Justin.</h2>
+        <h1>Hi, I'm Justin. 👋</h2>
         <ul>
           <li>
             A software engineer based in Los Angeles.
