styled home page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com"> 
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
   <script defer src="./assets/fonts/fontawesome-free-5.15.3-web/js/all.min.js"></script>
   <title>Justin Zeng - Software Engineer</title>
 </head>
@@ -28,18 +30,8 @@
 
     <div id="content">
       <section id="work">
-        <h1>Hi, I'm Justin. 👋</h2>
-        <ul>
-          <li>
-            A software engineer based in Los Angeles.
-          </li>
-          <li>
-            Co-creator of <a href="https://beekeeper-cli.github.io">Beekeeper</a> & <a href="https://www.api-q.com">API-Q</a>.
-          </li>
-          <li>
-            Occasional contributor to Gitlab's threat management domain.
-          </li>
-        </ul>
+        <h1>Hi, I'm Justin. 👋</h1>
+        <p>A software engineer based in Los Angeles. Co-creator of <a href="https://beekeeper-cli.github.io">Beekeeper</a> & <a href="https://www.api-q.com">API-Q</a>. Occasional contributor to Gitlab's threat management domain.</p>
       </section>
     </div>
   </div>
