added gitlab profile link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div id="content">
       <section id="work">
         <h1>Hi, I'm Justin. 👋</h1>
-        <p>A software engineer based in Los Angeles. Co-creator of <a href="https://beekeeper-cli.github.io/case-study.html">Beekeeper</a> & <a href="https://www.api-q.com">API-Q</a>. Occasional contributor to Gitlab's threat management domain.</p>
+        <p>A software engineer based in Los Angeles. Co-creator of <a href="https://beekeeper-cli.github.io/case-study.html">Beekeeper</a> & <a href="https://www.api-q.com">API-Q</a>. Occasional contributor to <a href="https://gitlab.com/jzeng88">Gitlab's</a> threat management domain.</p>
       </section>
     </div>
   </div>
