--- a/index.html
+++ b/index.html
@@ -1,40 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      property="og:description"
+      content="Hi, I'm a software engineer based in Los angeles. 👋"
+    />
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/css/reset.css">
-  <link rel="stylesheet" href="./assets/css/style.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com"> 
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
-  <script defer src="./assets/fonts/fontawesome-free-5.15.3-web/js/all.min.js"></script>
-  <title>Justin Zeng - Software Engineer</title>
-</head>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
 
-<body>
-  <div id="page">
-    <header>
-      <div id="header-container">
-        <div id="header-logo">
-          <img id="profile-img" src="./assets/img/justin-zeng.png" alt="justin-zeng">
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      defer
+      src="./assets/fonts/fontawesome-free-5.15.3-web/js/all.min.js"
+    ></script>
+    <title>Justin Zeng - Software Engineer</title>
+  </head>
+
+  <body>
+    <div id="page">
+      <header>
+        <div id="header-container">
+          <div id="header-logo">
+            <img
+              id="profile-img"
+              src="./assets/img/justin-zeng.png"
+              alt="justin-zeng"
+            />
+            <h1>Justin Zeng</h1>
+            <p>Los Angeles, CA</p>
+          </div>
+          <div id="contact">
+            <a target="_blank" href="mailto:hi.justinzeng@gmail.com" id="email"
+              ><i class="fas fa-envelope fa-2x"></i
+            ></a>
+            <a
+              target="_blank"
+              href="https://www.linkedin.com/in/justin-zeng-6a68b3153/"
+              id="linkedin"
+              ><i class="fab fa-linkedin fa-2x"></i
+            ></a>
+            <a target="_blank" href="https://github.com/jzeng88" id="github"
+              ><i class="fab fa-github-square fa-2x"></i
+            ></a>
+          </div>
         </div>
-        <div id="contact">
-          <a href="mailto:hi.justinzeng@gmail.com" id="email"><i class="fas fa-envelope fa-2x"></i></a>
-          <a href="https://www.linkedin.com/in/justin-zeng-6a68b3153/" id="linkedin"><i class="fab fa-linkedin fa-2x"></i></a>
-          <a href="https://github.com/jzeng88" id="github"><i class="fab fa-github-square fa-2x"></i></a>
-        </div>
+      </header>
+
+      <div id="content">
+        <section id="work">
+          <h2>Work</h2>
+          <ul>
+            <li>
+              <a target="_blank" href="https://www.notarize.com">Notarize</a>
+            </li>
+            <li>
+              <a
+                target="_blank"
+                href="https://beekeeper-cli.github.io/case-study.html"
+                >Beekeeper</a
+              >
+            </li>
+          </ul>
+
+          <h2>Open Source</h2>
+          <ul>
+            <li>
+              <a target="_blank" href="https://gitlab.com/jzeng88"
+                >Gitlab (Threat Management)</a
+              >
+            </li>
+          </ul>
+        </section>
       </div>
-    </header>
-
-    <div id="content">
-      <section id="work">
-        <h1>Hi, I'm Justin. 👋</h1>
-        <p>A software engineer based in Los Angeles. Co-creator of <a href="https://beekeeper-cli.github.io/case-study.html">Beekeeper</a> & occasional contributor to <a href="https://gitlab.com/jzeng88">Gitlab's</a> threat management domain.</p>
-      </section>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
